# ia_formula_one

./: AUTHORS  CMakeLists.txt  TODO
include/: list.h  vectors.h
src/: control.h  formulaone.c  list.c  vectors.c
tests/: test.c  test.h
